crates/karva/tests/it/snapshots/it__basic__max_fail_all_runs_every_test.snap
---
source: crates/karva/tests/it/basic.rs
info:
  program: karva
  args:
    - test
    - "--no-parallel"
    - "--max-fail=all"
---
success: false
exit_code: 1
----- stdout -----
    Starting 3 tests across 1 worker
        FAIL [TIME] test_max_fail_all::test_a
        FAIL [TIME] test_max_fail_all::test_b
        PASS [TIME] test_max_fail_all::test_c

diagnostics:

error[test-failure]: Test `test_a` failed
 --> test_max_fail_all.py:2:5
  |
2 | def test_a():
  |     ^^^^^^
3 |     assert False, 'a boom'
  |
info: Test failed here
 --> test_max_fail_all.py:3:5
  |
2 | def test_a():
3 |     assert False, 'a boom'
  |     ^^^^^^^^^^^^^^^^^^^^^^
4 |
5 | def test_b():
  |
info: a boom

error[test-failure]: Test `test_b` failed
 --> test_max_fail_all.py:5:5
  |
3 |     assert False, 'a boom'
4 |
5 | def test_b():
  |     ^^^^^^
6 |     assert False, 'b boom'
  |
info: Test failed here
 --> test_max_fail_all.py:6:5
  |
5 | def test_b():
6 |     assert False, 'b boom'
  |     ^^^^^^^^^^^^^^^^^^^^^^
7 |
8 | def test_c():
  |
info: b boom

────────────
     Summary [TIME] 3 tests run: 1 passed, 2 failed, 0 skipped

----- stderr -----
